xee-xpath-compiler/src/snapshots/xee_xpath_compiler__ast_ir__tests__cast_non_simple_schema_type.snap
---
source: xee-xpath-compiler/src/ast_ir.rs
expression: "convert_expr_single(\"1 cast as xs:untyped\")"
---
Err(
    SpannedError {
        error: XQST0052,
        span: Some(
            SourceSpan(
                0,
                20,
            ),
        ),
        detail: None,
        contexts: [],
    },
)
