xee-xpath-compiler/src/snapshots/xee_xpath_compiler__ast_ir__tests__cast_unknown_schema_type.snap
---
source: xee-xpath-compiler/src/ast_ir.rs
expression: "convert_expr_single(\"1 cast as unknown\")"
---
Err(
    SpannedError {
        error: XQST0052,
        span: Some(
            SourceSpan(
                0,
                17,
            ),
        ),
        detail: None,
        contexts: [],
    },
)
